# flask-web-api

./: .editorconfig  .gitignore  README.md  app.py  dao.py  data.json  data.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: install-dev-tools.sh
