[tool.poetry]
name = "taller"
version = "0.1.0"
description = "Flask Web Server"
authors = ["Arnaldo Torres <torres.arnaldo817@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
